docs/reference/v1.2/mpcie.rst
mPCIe Connector
###############


LimePSB RPCM board features mini PCIe x1 specification compatible socket. LimePSB RPCM board mPCIe socket is also compatible with some non-standard expansion boards like LimeSDR-XTRX, LoRaWAN and LoRa Core. More detailed information is listed in Table 20.


.. table:: Table 20. LimePSB RPCM board Mini PCIe x1 connector pinout

  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | **Pin** | **Mini PCIe x1 specification** | **LimePSB-RPCM**          | **XTRX Reference**     | **LoRaWAN reference**     | **SX1302/03 Corecell schematic** |
  |         |                                |                           |                        |                           |                                  |
  |         | **reference**                  | **schematic signal name** |                        |                           | **signal name**                  |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 1       | Wake#                          | RPI_PCIE_DET_nWAKE (NC)   | NC                     | NC                        | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 2       | 3.3 Vaux                       | VCC3P3                    | VCC3P3_MPCIE           | VCC                       | VCC5V_IN                         |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 3       | COEX1                          | PCIE_COEX1                | 1PPSI_GPIO1(1N)        | NC                        | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 4       | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 5       | COEX2                          | PCIE_COEX2                | 1PPSO_GPIO2(1P)        | PPS_IN                    | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 6       | GND                            | VCC1P5                    | NC                     | NC                        | GPIO(6) (NC)                     |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 7       | CLKREQ#                        | RPI_PCIE_CLK_nREQ         | CLK_REQUEST#           | NC                        | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 8       | UIM PWR                        | UIM_PWR                   | UIM_VCC                | NC                        | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 9       | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 10      | UIM_DATA                       | UIM_DATA                  | UIM_DIO                | SWDIO                     | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 11      | REFCLK-                        | RPI_PCIE_CLK_N            | PCIE_REF_CLK_N         | NC                        | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 12      | UIM_CLK                        | UIM_CLK                   | UIM_CLK                | SWCLK                     | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 13      | REFCLK+                        | RPI_PCIE_CLK_P            | PCIE_REF_CLK_P         | NC                        | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 14      | UIM_RESET                      | UIM_RESET                 | UIM_RST                | NC                        | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 15      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 16      | UIM_VPP                        | UIM_VPP                   | NC                     | BOOT0                     | POWER_EN(NC)                     |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 17      | Reserved                       | PCIE_UIM8                 | TDD_GPIO3_N            | NC                        | HOST_SCK (NC)                    |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 18      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 19      | Reserved                       | PCIE_UIMC4 (NC)           | PCIE_CLK_IN            | NC                        | HOST_MISO(NC)                    |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 20      | W_DISABLE#                     | NC                        | TDD_GPIO3_P            | nDISABLE                  | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 21      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 22      | PERST#                         | RPI_PCIE_nRST             | PCIE_PERST#            | nRESET                    | SX1302_RESET_HOST (NC)           |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 23      | PERn0                          | RPI_PCIE_RX_N             | PCIE_TX0_N             | NC                        | HOST_MOSI(NC)                    |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 24      | 3.3Vaux                        | VCC3P3                    | NC                     | VCC                       | SX1261_BUSY (NC)                 |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 25      | PERp0                          | RPI_PCIE_RX_P             | PCIE_TX0_P             | NC                        | HOST_CSN (NC)                    |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 26      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 27      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 28      | 1.5Volt                        | VCC1P5                    | NC                     | NC                        | SX1302_GPIO_8 (NC)               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 29      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 30      | SMB CLK                        | PCIE_SMB_CLK              | LMK_CLKOUT4/GPIO8      | NC                        | I2C_SCL (NC)                     |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 31      | PETn0                          | PCIE_PET0_N               | PCIE_RX0_N             | NC                        | PPS                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 32      | SMB Data                       | PCIE_SMB_DATA             | LMK_CLKOUT4/GPIO8      | NC                        | I2C_SDA (NC)                     |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 33      | PETp0                          | PCIE_PET0_P               | PCIE_RX0_P             | NC                        | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 34      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 35      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 36      | USB_D-                         | PCIE_USB_N                | USB_D_N                | USB_D- / Tx               | USB_DM                           |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 37      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 38      | USB_D+                         | PCIE_USB_P                | USB_D_P                | USB_D+ / Rx               | USB_DP                           |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 39      | 3.3Vaux                        | VCC3P3                    | PCIE_TX1_N (NC)        | VCC                       | VCC3V3_IN                        |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 40      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 41      | 3.3Vaux                        | VCC3P3                    | PCIE_TX1_P (NC)        | VCC                       | VCC3V3_IN                        |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 42      | LED_WWAN#                      | PCIE_LED_WWAN             | LED_WWAN#_GPIO5        | nTX                       | NC                               |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 43      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 44      | LED_WLAN#                      | PCIE_LED_WLAN             | LED_WLAN#_GPIO6        | nRX                       | SX1261_NSS (NC)                  |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 45      | Reserved                       | NC                        | GND                    | NC                        | JTCK-SWCLK (NC)                  |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 46      | LED_WPAN#                      | PCIE_LED_WPAN             | LED_WPAN#_GPIO7        | NC                        | SX1261_DIO1 (NC)                 |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 47      | Reserved                       | NC                        | PCIE_RX1_N (NC)        | NC                        | JTMS-SWDIO (NC)                  |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 48      | 1.5Volt                        | VCC1P5                    | NC                     | NC                        | SX1261_NRESET(NC)                |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 49      | Reserved                       | NC                        | PCIE_RX1_P (NC)        | NC                        | MCU_NRESET (NC)                  |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 50      | GND                            | GND                       | GND                    | GND                       | GND                              |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 51      | Reserved                       | NC                        | PCIE_W_DISABLE2# (NC)  | NC                        | MCU_BOOT0 (NC)                   |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
  | 52      | 3.3Vaux                        | VCC3P3                    | VCC3P3_MPCIE           | VCC                       | VCC3V3_IN                        |
  +---------+--------------------------------+---------------------------+------------------------+---------------------------+----------------------------------+
